<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_notes">Add Notes</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="desea_borrar_el_item_de_la_lista">Desea borrar el item de la lista?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="tag">Tag</string>
</resources>